Fix some android lint warnings, move device management to submenu